--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -499,7 +499,7 @@
 "Successful purchase." = "Erfolgreicher Kauf";
 "Invalid purchase. AppStore does not verify purchase for the given parameters." = "Ungültiger Kauf AppStore überprüft den Kauf für die angegebenen Parameter nicht.";
 "A temporary error has occurred due to technical reasons." = "Aus technischen Gründen ist ein temporärer Fehler aufgetreten.";
-"validate_purchase_already_subscribed_text" = "Abonnement, das mit diesem Kauf verbunden ist, ist bereits für einen anderen Lifebox-Benutzer aktiviert. Beachten Sie, dass die Verwendung von verschiedenen Lifebox-Konten mit derselben Apple- oder Google-ID zu dieser Situation führen kann.";
+"Subscription related with this purchase is already activated for another lifebox user. Note that using different lifebox accounts with the same Apple or Google ID might result with this situation." = "Abonnement, das mit diesem Kauf verbunden ist, ist bereits für einen anderen Lifebox-Benutzer aktiviert. Beachten Sie, dass die Verwendung von verschiedenen Lifebox-Konten mit derselben Apple- oder Google-ID zu dieser Situation führen kann.";
 "Shows that a response operation is done for the given receipt." = "Zeigt an, dass eine Antwortoperation für den angegebenen Beleg ausgeführt wird.";
 "Auto Upload is off." = "Der automatische Upload ist deaktiviert.";
 "Photos and videos waiting to be synced" = "Fotos und Videos warten auf die Synchronisierung";
@@ -2204,4 +2204,10 @@ then {11,99 TRY/Month}*/
 "order_not_delivered" = "Bestellung konnte nicht zum Druck übertragen werden";
 "order_not_delivered_detail" = "Ihre Bestellung konnte aus technischen Gründen nicht zum Druck übertragen werden. Bitte geben Sie einen neuen Druckauftrag auf.";
 "grace_banner_paycell_text" = "";
-"sync_page_offer_pop_up" = "";
+"sync_page_offer_pop_up" = "Klicken Sie jetzt, um die vorteilhaften lifebox-Pakete zu entdecken, die speziell für Sie bestimmt sind!";
+"validate_purchase_already_subscribed_text" = "Das mit diesem Kauf verbundene Abonnement ist bereits auf dem Konto %@ mit der E-Mail %@ für einen anderen lifebox-Benutzer aktiviert. Beachten Sie, dass die Verwendung verschiedener lifebox-Konten mit demselben Apple/Google-Konto zu dieser Situation führen kann.";
+"print_edit_cancel_popup_info" = "Ihre Fotobearbeitungen werden gelöscht.";
+"revert_to_original" = "Zurück zum Original";
+"save_changes" = "Änderungen Speichern";
+"ACCOUNT_HAS_SLCM_SUBSCRIPTION" = "Um Ihre Telefonnummer zu ändern, müssen Sie zunächst Ihr lifebox-Paket kündigen, das in der Telefonrechnung enthalten ist. Bitte wenden Sie sich an den Turkcell-Kundendienst.";
+"ACCOUNT_HAS_FOREIGN_SUBSCRIPTION" = "Um Ihre Telefonnummer zu ändern, wenden Sie sich zunächst an Ihren Netzbetreiber und lassen Sie Ihre Pakete stornieren.";
