--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2138,7 +2138,9 @@ then {11,99 TRY/Month}*/
 "printed_package_view" = "عرض حزم الطباعة الخاصة بي";
 "more_photo_right" = "كنت قد حصلت على أكثر من %d تقديم الصور. هل أنت متأكد أنك تريد الاستمرار?";
 "no_more_photo_right" = "لقد اخترت أكثر من %d الصور. تقليل للمتابعة.";
-"timeline_header" = "أفضل ذكريات 2023";
+"timeline_header" = "أفضل ذكريات %d";
+
+/*Fuzzy*/
 "timeline_description" = "قمنا بتجميع أفضل ذكريات هذا العام من أجلك. تحقق منهم الآن!";
 "selected_for_print" = "مختارة للطباعة";
 "print_cancel_popup_question" = "هل أنت متأكد أنك تريد إلغاء?";
@@ -2223,3 +2225,4 @@ then {11,99 TRY/Month}*/
 "save_changes" = "احفظ التغييرات";
 "ACCOUNT_HAS_SLCM_SUBSCRIPTION" = "لتغيير رقم هاتفك ، يجب عليك أولا إلغاء حزمة lifebox المضمنة في فاتورة الهاتف. يرجى الاتصال بخدمة العملاء Turkcell.";
 "ACCOUNT_HAS_FOREIGN_SUBSCRIPTION" = "لتغيير رقم هاتفك ، اتصل أولا بالمشغل الخاص بك وقم بإلغاء الحزم الخاصة بك.";
+"free_up_space_title_settings" = "";
