--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2431,7 +2431,9 @@ then {11,99 TRY/Month}*/
 "printed_package_view" = "Voir mes forfaits d'impression.";
 "more_photo_right" = "Vous avez sélectionné plus de %d photos. Etes-vous sûr de vouloir continuer?";
 "no_more_photo_right" = "Vous avez sélectionné plus de %d photos. Réduisez pour continuer.";
-"timeline_header" = "Les meilleurs souvenirs de %d";
+"timeline_header" = "Les Meilleurs Souvenirs De %d";
+
+/*Fuzzy*/
 "timeline_description" = "Nous avons compilé pour vous les meilleurs souvenirs de cette année. Découvrez-les dès maintenant!";
 "selected_for_print" = "Sélectionnées pour l'impression";
 "print_cancel_popup_question" = "Êtes-vous sûr de vouloir annuler?";
@@ -2516,3 +2518,4 @@ then {11,99 TRY/Month}*/
 "save_changes" = "Sauvegarder les Modifications";
 "ACCOUNT_HAS_SLCM_SUBSCRIPTION" = "Pour changer de numéro de téléphone, vous devez d'abord annuler votre forfait lifebox, qui est inclus dans la facture de téléphone. Veuillez appeler le service clientèle de Turkcell.";
 "ACCOUNT_HAS_FOREIGN_SUBSCRIPTION" = "Pour changer de numéro de téléphone, contactez d'abord votre opérateur et faites annuler vos forfaits.";
+"free_up_space_title_settings" = "";
