--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2129,6 +2129,8 @@ then {11,99 TRY/Month}*/
 "more_photo_right" = "Ви вибрали більше ніж %d фотографій. Ви впевнені, що хочете продовжити?";
 "no_more_photo_right" = "Ви вибрали більше %d фотографій. Зменшіть, щоб продовжити.";
 "timeline_header" = "Найкращі спогади %d року";
+
+/*Fuzzy*/
 "timeline_description" = "Ми зібрали для вас найкращі спогади цього року. Перевірте їх зараз!";
 "selected_for_print" = "Вибрано для друку";
 "print_cancel_popup_question" = "Ви впевнені, що хочете скасувати?";
@@ -2213,3 +2215,4 @@ then {11,99 TRY/Month}*/
 "save_changes" = "Зберегти Зміни";
 "ACCOUNT_HAS_SLCM_SUBSCRIPTION" = "Для того, щоб змінити номер телефону, необхідно спочатку відключити пакет lifebox, який включено в рахунок за телефонний зв'язок. Будь ласка, зверніться до служби підтримки клієнтів Turkcell.";
 "ACCOUNT_HAS_FOREIGN_SUBSCRIPTION" = "Щоб змінити номер телефону, необхідно спочатку звернутися до свого оператора і попросити анулювати ваші пакети.";
+"free_up_space_title_settings" = "";
