--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2136,11 +2136,13 @@ then {11,99 TRY/Month}*/
 "printed_photo_card_info" = "Печатать 5 фотографий каждый месяц.";
 "printed_photo_card_body" = "Распечатайте свои фотографии.";
 "printed_photo_card_body_no_right" = "Вы использовали свое право на печать фотографий.";
-"printed_photo_card_info_no_right" = "Вы можете снова создавать печать, начиная с %d даты.";
+"printed_photo_card_info_no_right" = "Когда пакет будет обновлен, вы сможете снова отправить свои фотографии на печать.";
 "printed_package_view" = "Посмотреть мои пакеты печати.";
 "more_photo_right" = "У вас есть еще %d фотографий для отправки. Вы уверены, что хотите продолжить?";
 "no_more_photo_right" = "Вы выбрали более %d фотографий. Уменьшите, чтобы продолжить.";
 "timeline_header" = "Лучшие воспоминания %d года";
+
+/*Fuzzy*/
 "timeline_description" = "Мы собрали для вас лучшие воспоминания этого года. Посмотрите их прямо сейчас!";
 "selected_for_print" = "Выбрано для печати";
 "print_cancel_popup_question" = "Вы уверены, что хотите отказаться?";
@@ -2218,6 +2220,8 @@ then {11,99 TRY/Month}*/
 "order_not_delivered" = "Заказ не Удалось Передать на Печать";
 "order_not_delivered_detail" = "Ваш заказ не удалось передать на печать по техническим причинам. Пожалуйста, отправьте новый заказ на печать еще раз.";
 "grace_banner_paycell_text" = "";
+
+/*Fuzzy*/
 "sync_page_offer_pop_up" = "Нажмите прямо сейчас, чтобы узнать о выгодных пакетах lifebox, предназначенных специально для Вас!";
 "validate_purchase_already_subscribed_text" = "Подписка, связанная с этой покупкой, уже активирована на учетной записи %@ с электронной почтой %@ для другого пользователя lifebox. Обратите внимание, что использование различных учетных записей lifebox с одной и той же учетной записью Apple/Google может привести к подобной ситуации.";
 "print_edit_cancel_popup_info" = "Редактирование фотографий будет удалено.";
@@ -2225,3 +2229,6 @@ then {11,99 TRY/Month}*/
 "save_changes" = "Сохранить Изменения";
 "ACCOUNT_HAS_SLCM_SUBSCRIPTION" = "Чтобы сменить номер телефона, необходимо сначала отказаться от пакета lifebox, который подключен к счету за телефон. Пожалуйста, обратитесь в службу поддержки Turkcell.";
 "ACCOUNT_HAS_FOREIGN_SUBSCRIPTION" = "Чтобы изменить номер телефона, необходимо сначала обратиться к своему оператору и попросить аннулировать ваши пакеты.";
+
+/*Fuzzy*/
+"free_up_space_title_settings" = "Освободите место на вашем устройстве.";
