--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2176,7 +2176,7 @@ then {11,99 TRY/Month}*/
 "printed_photo_card_info" = "Her ay 5 adet fotoğrafını bastır.";
 "printed_photo_card_body" = "Fotoğraflarını bastır.";
 "printed_photo_card_body_no_right" = "Fotoğraf baskılama hakkını kullandın.";
-"printed_photo_card_info_no_right" = "Paketin yenilendiğinde fotoğraflarını tekrar baskıya gönderebilirsin.";
+"printed_photo_card_info_no_right" = "Paketin yenilendiğinde tekrar dene.";
 
 /*Fuzzy*/
 "printed_package_view" = "Baskı paketlerimi gör.";
